--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,7 +7,8 @@ jobs:
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
-        operating-system: [ubuntu-latest, windows-latest]
+        operating-system: [ubuntu-latest]
+        php: [5.6, 7.1, 7.2, 7.3]
     steps:
     - name: Checkout
       uses: actions/checkout@master
@@ -25,3 +26,9 @@ jobs:
 
     - name: npm test
       run: npm test
+
+    - name: Setup PHP
+      uses: nanasess/setup-php@master
+      with:
+        php-version: ${{ matrix.php}}
+
