--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,6 +1,6 @@
 ## Rest of the file pulled from https://github.com/actions/setup-python/blob/master/.github/workflows/workflow.yml
 name: Main workflow
-on: [push]
+on: [push, pull_request]
 jobs:
   run:
     name: Run
