Display to phpinfo

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -32,5 +32,7 @@ jobs:
       with:
         php-version: ${{ matrix.php}}
     - name: php --version
-      run: php --version
+      run: |
+        php --version
+        php -i
 
