Fix install location to RUNNER_TOOL_CACHE of phpenv

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -30,15 +30,15 @@ jobs:
     - name: setup phpenv
       if: matrix.php <= 5.5
       run: |
-        git clone https://github.com/phpenv/phpenv.git ~/.phpenv
-        export PATH="$HOME/.phpenv/bin:$PATH"
+        git clone https://github.com/phpenv/phpenv.git $RUNNER_TOOL_CACHE/.phpenv
+        export PATH="$RUNNER_TOOL_CACHE/.phpenv/bin:$PATH"
         eval "$(phpenv init -)"
         phpenv
 
     - name: setup php-build
       if: matrix.php <= 5.5
       run: |
-        export PATH="$HOME/.phpenv/bin:$PATH"
+        export PATH="$RUNNER_TOOL_CACHE/.phpenv/bin:$PATH"
         eval "$(phpenv init -)"
         git clone https://github.com/php-build/php-build $(phpenv root)/plugins/php-build
 
