--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -57,6 +57,11 @@ jobs:
       uses: ./
       with:
         php-version: ${{ matrix.php}}
+
+    - name: check to pg_config
+      if: matrix.php <= 5.5
+      run: /usr/bin/pg_config
+
     - name: php --version
       run: |
         php --version
