--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        operating-system: [ubuntu-18.04, ubuntu-16.04]
+        operating-system: [ubuntu-18.04, ubuntu-16.04, windows-2019, windows-2016]
         php: [5.4, 5.5, 5.6, 7.1, 7.2, 7.3]
 
     steps:
