--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,7 +9,16 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [ubuntu-18.04, ubuntu-16.04, windows-2019, windows-2016]
-        php: [5.4, 5.5, 5.6, 7.1, 7.2, 7.3, 7.2.11]
+        php: [5.4, 5.5, 5.6, 7.1, 7.2, 7.3, 7.2.11, 7.2.12]
+      exclude:
+        - operating-system: windows-2019
+          php: 7.2.11
+        - operating-system: windows-2016
+          php: 7.2.11
+        - operating-system: ubuntu-18.04
+          php: 7.2.12
+        - operating-system: ubuntu-16.04
+          php: 7.2.12
 
     steps:
     - name: Checkout
