--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,15 +21,37 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-20.04, ubuntu-18.04, ubuntu-16.04, windows-2019, windows-2016]
-        php: [5.4, 5.5, 5.6, 7.1, 7.2, 7.4, 7.3, 7.2.11, 7.2.12]
+        php: [5.4, 5.5, 5.6, 7.1, 7.2, 7.4, 7.3, 7.2.11, 7.2.12, 7.4.12]
         exclude:
           - os: windows-2019
             php: 7.2.11
+          - os: windows-2019
+            php: 7.4.12
           - os: windows-2016
             php: 7.2.11
+          - os: windows-2016
+            php: 7.4.12
           - os: ubuntu-18.04
             php: 7.2.12
+          - os: ubuntu-18.04
+            php: 7.4.12
           - os: ubuntu-16.04
+            php: 5.4
+          - os: ubuntu-16.04
+            php: 5.5
+          - os: ubuntu-16.04
+            php: 7.2.11
+          - os: ubuntu-16.04
+            php: 7.2.12
+          - os: ubuntu-16.04
+            php: 7.4.12
+          - os: ubuntu-20.04
+            php: 5.4
+          - os: ubuntu-20.04
+            php: 5.5
+          - os: ubuntu-20.04
+            php: 7.2.11
+          - os: ubuntu-20.04
             php: 7.2.12
 
     steps:
