--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,24 +21,24 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-20.04, ubuntu-18.04, ubuntu-16.04, windows-2019, windows-2016]
-        php: [5.4, 5.5, 5.6, 7.1, 7.2, 7.3, 7.4, 8.0, 7.2.11, 7.2.12, 7.4.12]
+        php: [5.4, 5.5, 5.6, 7.1, 7.2, 7.3, 7.4, 8.0, 7.2.11, 7.2.12, 8.0.3]
         exclude:
           - os: windows-2019
             php: 7.2.11
           - os: windows-2019
-            php: 7.4.12
-          - os: windows-2019
             php: 8.0
+          - os: windows-2019
+            php: 8.0.3
           - os: windows-2016
             php: 7.2.11
           - os: windows-2016
-            php: 7.4.12
-          - os: windows-2016
             php: 8.0
+          - os: windows-2016
+            php: 8.0.3
           - os: ubuntu-18.04
             php: 7.2.12
           - os: ubuntu-18.04
-            php: 7.4.12
+            php: 8.0.3
           - os: ubuntu-16.04
             php: 5.4
           - os: ubuntu-16.04
@@ -50,7 +50,7 @@ jobs:
           - os: ubuntu-16.04
             php: 7.2.12
           - os: ubuntu-16.04
-            php: 7.4.12
+            php: 8.0.3
           - os: ubuntu-20.04
             php: 5.4
           - os: ubuntu-20.04
@@ -62,7 +62,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@master
+      uses: actions/checkout@v2
 
     - name: Set Node.js 10.x
       uses: actions/setup-node@master
