--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-20.04, ubuntu-18.04, ubuntu-16.04, windows-2019, windows-2016]
+        os: [ubuntu-20.04, ubuntu-18.04, windows-2019, windows-2016]
         php: [5.4, 5.5, 5.6, 7.1, 7.2, 7.3, 7.4, 8.0, 7.2.11, 7.2.12, 8.0.3]
         exclude:
           - os: windows-2019
@@ -38,18 +38,6 @@ jobs:
           - os: ubuntu-18.04
             php: 7.2.12
           - os: ubuntu-18.04
-            php: 8.0.3
-          - os: ubuntu-16.04
-            php: 5.4
-          - os: ubuntu-16.04
-            php: 5.5
-          - os: ubuntu-16.04
-            php: 8.0
-          - os: ubuntu-16.04
-            php: 7.2.11
-          - os: ubuntu-16.04
-            php: 7.2.12
-          - os: ubuntu-16.04
             php: 8.0.3
           - os: ubuntu-20.04
             php: 5.4
@@ -70,15 +58,15 @@ jobs:
         version: 10.x
 
     - name: npm install
-      if: matrix.os == 'ubuntu-20.04' || matrix.os == 'ubuntu-18.04' || matrix.os == 'ubuntu-16.04'
+      if: matrix.os == 'ubuntu-20.04' || matrix.os == 'ubuntu-18.04'
       run: npm install
 
     - name: Lint
-      if: matrix.os == 'ubuntu-20.04' || matrix.os == 'ubuntu-18.04' || matrix.os == 'ubuntu-16.04'
+      if: matrix.os == 'ubuntu-20.04' || matrix.os == 'ubuntu-18.04'
       run: npm run format-check
 
     - name: npm test
-      if: matrix.os == 'ubuntu-20.04' || matrix.os == 'ubuntu-18.04' || matrix.os == 'ubuntu-16.04'
+      if: matrix.os == 'ubuntu-20.04' || matrix.os == 'ubuntu-18.04'
       run: npm test
 
     - name: Setup PHP
