--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,7 +21,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-20.04, ubuntu-18.04, windows-2019, windows-2016]
-        php: [5.4, 5.5, 5.6, 7.1, 7.2, 7.3, 7.4, 8.0, 7.2.11, 7.2.12, 8.0.3]
+        php: [5.4, 5.5, 5.6, 7.1, 7.2, 7.3, 7.4, 8.0, 8.1, 7.2.11, 7.2.12, 8.0.3]
         exclude:
           - os: windows-2019
             php: 7.2.11
