--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-20.04, ubuntu-18.04, windows-2019, windows-2016]
+        os: [ubuntu-20.04, ubuntu-18.04, windows-2019]
         php: [5.4, 5.5, 5.6, 7.1, 7.2, 7.3, 7.4, 8.0, 8.1, 7.2.11, 7.2.12, 8.0.3]
         exclude:
           - os: windows-2019
@@ -28,12 +28,6 @@ jobs:
           - os: windows-2019
             php: 8.0
           - os: windows-2019
-            php: 8.0.3
-          - os: windows-2016
-            php: 7.2.11
-          - os: windows-2016
-            php: 8.0
-          - os: windows-2016
             php: 8.0.3
           - os: ubuntu-18.04
             php: 7.2.12
