--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,20 +21,26 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-22.04, ubuntu-20.04, ubuntu-18.04, windows-2022, windows-2019]
-        php: ['5.4', '5.5', '5.6', '7.1', '7.2', '7.3', '7.4', '8.0', '8.1', '7.2.11', '7.2.12', '8.1.9']
+        php: ['5.4', '5.5', '5.6', '7.1', '7.2', '7.3', '7.4', '8.0', '8.1', '7.2.11', '7.2.12', '8.1.9', '8.2snapshot']
         exclude:
           - os: windows-2019
             php: 7.2.11
           - os: windows-2019
             php: 8.0
+          - os: windows-2019
+            php: 8.2snapshot
           - os: windows-2022
             php: 7.2.11
           - os: windows-2022
             php: 8.0
+          - os: windows-2022
+            php: 8.2snapshot
           - os: ubuntu-18.04
             php: 7.2.12
           - os: ubuntu-18.04
             php: 8.1.9
+          - os: ubuntu-18.04
+            php: 8.2snapshot
           - os: ubuntu-20.04
             php: 5.4
           - os: ubuntu-20.04
