--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "setup-php",
-  "version": "3.1.1",
+  "version": "4.0.0",
   "private": true,
   "description": "setup php action",
-  "main": "dest/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "package": "ncc build --source-map --license licenses.txt",
