--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -24,6 +24,10 @@ jobs:
         php: ['5.4', '5.5', '5.6', '7.1', '7.2', '7.3', '7.4', '8.0', '8.1', '7.2.11', '7.2.12', '8.1.9', '8.2', '8.3']
         exclude:
           - os: windows-2019
+            php: 5.4
+          - os: windows-2022
+            php: 5.4
+          - os: windows-2019
             php: 7.2.11
           - os: windows-2019
             php: 8.0
