--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-22.04, ubuntu-20.04, windows-2022, windows-2019]
+        os: [ubuntu-24.04, ubuntu-22.04, ubuntu-20.04, windows-2022, windows-2019]
         php: ['5.4', '5.5', '5.6', '7.1', '7.2', '7.3', '7.4', '8.0', '8.1', '7.2.11', '7.2.12', '8.1.9', '8.2', '8.3']
         exclude:
           - os: windows-2019
@@ -50,6 +50,14 @@ jobs:
           - os: ubuntu-22.04
             php: 7.2.11
           - os: ubuntu-22.04
+            php: 7.2.12
+          - os: ubuntu-24.04
+            php: 5.4
+          - os: ubuntu-24.04
+            php: 5.5
+          - os: ubuntu-24.04
+            php: 7.2.11
+          - os: ubuntu-24.04
             php: 7.2.12
 
     steps:
